@@ -178,9 +178,12 @@ class Dialog(QDialog):
             
     def setDiffText(self, text=''):
         if text:
+            from_filename = "current"   # TODO: maybe use real filename here
+            to_filename = "converted"   # but difflib can choke on non-ascii characters,
+                                        # see https://github.com/wbsoft/frescobaldi/issues/674
             difflist = list(difflib.unified_diff(
                     self._text.split('\n'), text.split('\n'), 
-                    _("Current Document"), _("Converted Document")))
+                    from_filename, to_filename))
             diffHLstr = self.diffHighl(difflist)
             self.uni_diff.setHtml(diffHLstr)
         else:
